# utag

./: .gitignore  CMakeLists.txt  README.md
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  DirProcess.cpp  DirProcess.h  dropdialog.cpp  dropdialog.h  dropdialog.ui  droplabel.cpp  droplabel.h  droptablewidget.cpp  droptablewidget.h  filedropframe.cpp  filedropframe.h  fileutils.cpp  fileutils.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mp3tag.cpp  mp3tag.h  tagger.cpp  tagger.h
